Integrated Payment and Deliverables submission.