@@ -39,6 +39,10 @@ public class PostsService {
                 .orElseThrow(() -> new RuntimeException("Post not found with id: " + postId));
     }
 
+    public PostResponseDTO getPostResponseById(Long postId){
+        return getPostResponseDTO(getPostById(postId),null);
+    }
+
 
     public ResponseEntity createPost(PostRequestDTO postsDTO)
     {
@@ -60,50 +64,10 @@ public class PostsService {
         }
         List<Posts> posts=postsRepository.findAll();
 
-        return posts.stream().filter(post->post.getCreatedBy()==user).map(post -> {
-            PostResponseDTO dto = new PostResponseDTO();
-            dto.setId(post.getId());
-            UserDTO createdBy=new UserDTO();
-            createdBy.setName(user.getName());
-            createdBy.setEmail(user.getEmail());
-            createdBy.setId(user.getId());
-            dto.setCreatedBy(createdBy);
-            //dto.setBudget(post.getBudget());
-            dto.setDeadline(post.getDeadline());
-            dto.setLocation(post.getLocation());
-            dto.setType(post.getType());
-            dto.setTitle(post.getTitle());
-            dto.setTitle(post.getTitle());
-            dto.setDescription(post.getDescription());
-            dto.setApplicants(post.getApplications().size());
-            dto.setOpenRoles(post.getOpenRoles());
-            dto.setFollowers(post.getFollowers());
-            dto.setPostStatus(post.getPostStatus().name());
-            dto.setPlatformsNeeded(post.getPlatformsNeeded().toArray(new String[0]));
-           dto.setCreatedByMe(true);
-
-            // Convert image to Base64
-            if (post.getImageData() != null) {
-                dto.setImageBase64(Base64.getEncoder().encodeToString(post.getImageData()));
-            }
-
-            // Convert applications
-            List<ApplicationDTO> apps = post.getApplications()
-                    .stream()
-                    .map(app -> {
-                        ApplicationDTO a = new ApplicationDTO();
-                        a.setPostId(app.getPost().getId());
-                        a.setInfluencerId(app.getInfluencer().getId());
-                        a.setPitchMessage(app.getPitchMessage());
-                        a.setAppliedAt(app.getAppliedAt());
-                        return a;
-                    })
-                    .toList();
-
-            dto.setApplications(apps);
-
-            return dto;
-        }).collect(Collectors.toList());
+        return posts.stream()
+                .filter(post -> post.getCreatedBy().equals(user))
+                .map(post -> getPostResponseDTO(post, user))
+                .collect(Collectors.toList());
     }
 
     public static void setApplications(Posts post,Application application){
